# kanban-overlay

./: ARCHITECTURE.md  Cargo.toml  DEVELOPER_GUIDE.md  INSTALL_WINDOWS.md  PROJECT_SUMMARY.md  QUICKREF.md  README.md  START_HERE.md  VISUAL_MOCKUP.md  build.bat  build.sh  run-debug.bat
src/: commands.rs  main.rs  persistence.rs  state.rs  ui.rs
