[package]
name = "kanban-overlay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kanban-overlay"
path = "src/main.rs"

[dependencies]
# UI Framework
eframe = "0.28"
egui = "0.28"

# Global hotkey support
global-hotkey = "0.6"

# System tray icon
tray-icon = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime for file I/O
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros", "time"] }

# Directory utilities
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target.'cfg(windows)'.build-dependencies]
